--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.47.0",
     "prettier": "^3.0.2",
     "sass": "^1.66.1",
+    "sweetalert2": "^11.7.26",
     "vuetify": "^3.3.13"
   }
 }
