--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "typecheck": "nuxt typecheck",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -21,6 +22,7 @@
     "prettier": "^3.0.2",
     "sass": "^1.66.1",
     "sweetalert2": "^11.7.26",
+    "uuid": "^9.0.1",
     "vuetify": "^3.3.13"
   }
 }
