--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass": "^1.66.1",
     "sweetalert2": "^11.7.26",
     "uuid": "^9.0.1",
+    "vercel": "^32.2.4",
     "vuetify": "^3.3.13"
   }
 }
